bloonix-server (0.20) released at 2015-XX-XX

    * Nagios stats can now be parsed and stored.
    * ServiceChecker now except __DIE__.
    * Level of message 'no postdata received' changed to warning.
    * Path /srv/bloonix/server removed.

bloonix-server (0.19) released at 2015-02-16

    * Kicked sth_cache_enabled from database config.

bloonix-server (0.18) released at 2015-02-16

    * Add parameter sth_cache_enabled to the database config.

bloonix-server (0.17) released at 2015-02-14

    * Removed typecasting in bloonix-roll-forward-log.
    * Transfer the database configuration to /etc/bloonix/database/main.conf.

bloonix-server (0.16) released at 2015-01-29

    * Fixed redirect section and kicked sms_to.

bloonix-server (0.15) released at 2015-01-26

    * Fixed permissions of hosts.conf that is generated
      by bloonix-update-agent-host-config.

bloonix-server (0.14) released at 2015-01-13

    * Kicked dependency postfix.

bloonix-server (0.13) released at 2015-01-02

    * Fixed volatile handling if max attempt is higher than 1.

bloonix-server (0.12) released at 2014-12-23

    * Fixed status switches from warning to critical if attempt max
      is reached.
    * Fixed nagios-wrapper/simple-wrapper handling.
    * Improved logging for invalid data.

bloonix-server (0.11) released at 2014-12-14

    * Improved the script to count elasticsearch documents for each
      service.
    * Improved script bloonix-delete-es-host-data.
    * Fixed message formatting for redirected messages.
    * Improved the interval handling for services in status
      WARNING, CRITICAL, UNKNOWN and INFO.

bloonix-server (0.10) released at 2014-12-05

    * Plugin results are now stored each time and not only
      by status switches.

bloonix-server (0.9) released at 2014-12-02

    * Changed the boot facility.
    * Allow multiple locations within the host id.

bloonix-server (0.8) released at 2014-11-17

    * bloonix-update-agent-host-config adds now the agent id